# lamb

./: Cargo.toml  README.md  flake.nix
examples/: ambiguous.lamb  closure.lamb  if.lamb  sound_let_gen.lamb  test.lamb  tuples.lamb  type_annotations.lamb  uncurrying.lamb
src/: env.rs  environment.rs  main.rs  pipeline.rs  pretty.rs
src/anf/: closure_conversion.rs  convert.rs  mod.rs  syntax.rs
src/common/: literal.rs  mod.rs
src/core/: check.rs  mod.rs  prim.rs  syntax.rs  uncurry.rs  union_find.rs
src/lifted/: lift.rs  mod.rs  syntax.rs
src/surface/: lexer.rs  mod.rs  parser.lalrpop  syntax.rs
src/tc/: check.rs  error.rs  mod.rs  prim.rs  syntax.rs
